--- a/implementations/src/App.css
+++ b/implementations/src/App.css
@@ -4,5 +4,17 @@ html,body{height:100%;}
   height: 100%;
 }
 
-/*  .main-content {margin-bottom: 65px} */
+.CodeMirror{
+  height: 100%;
 
+}
+
+.react-codemirror2{
+  height: 100%;  
+}
+
+.resizer{
+  cursor: row-resize !important;; 
+  background-color: black;
+  height: 10px;
+}
