--- a/implementations/src/App.css
+++ b/implementations/src/App.css
@@ -32,6 +32,7 @@ html,body{height:100%;}
   text-align: center;
   vertical-align: middle;
   line-height: 7px; 
-  border-radius: 3px;
+  border-radius: 3px; 
   user-select: none;
+  z-index: +100;
 }
